gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for gnetlist

Most recent changes (version wise) are at the top of this file 

6/8/99	Integrated old gnetlist into the current development dist scheme


--------------- new devel stuff starts here ----------------------------


5/14/99 Updated manual page a bit 

5/13/99 Integrated Mike Jarabek's verilog netlister 

4/11/99	Added some more debugging information when reading in the scm file

4/9/99	Fixed Makefile.am so that gnetlist.1 is installed

3/26/99 Added some newlines in a few places in gnetlist.scm

3/20/99 Got spice backend guile functions to follow the new 
	backend:function_name naming convention

3/19/99	Updated g_rc to print more diag message to the log file when
	it can't find an rc file (like gschem)

3/18/99 Updated g_rc to use new macros for finding system-*rc files

3/11/99 Added back the original implementation of the write-net-name-... 
	guile code for the spice netlist.  It works right for transistors.
	Mine did not.  Bummer.  Spice netlist doesn't support slotting for
	now.

3/10/99	Fixed a coredump when you pass in an "unknown" for the pin number
	in get-nets.  Return a list which is ("ERROR"). (pointed out by
	Bas Gieltjes)

	Changed ales-netlist format to geda-netlist format.  Changed
	gnetlist.scm appropriately	

	Renamed all C guile functions to be called gnetlist:<whatever>
	This makes it clear where functions come from 

	Added code to set netlist_mode which enables/disables certain
	netlist features.  Each backend should call this with something
	even if it's the default mode: gEDA

	Added gnetlist:set-netlist-mode to g_register and g_netlist which 
	sets the above mode

	Integrated tango netlist backend by Nuno Sucena (thanks)

	Changed the highest level function in all backends to take a 
	parameter which is the netlist output filename.  This is a required
	parameter
