@@ -1,5 +1,5 @@
 
-SUBDIRS=libgeda symbols gschem 
+SUBDIRS=libgeda symbols gschem gnetlist gpcb
 
 prefix=${HOME}/geda
 
