@@ -8,6 +8,11 @@ ChangeLog for libgeda
 
 Most recent changes are at the top of this file
 
+6/17/99 Added o_ales_search_object which goes through entire the ales_table and 
+	finds the n'th occurance of object 
+
+	Above may be removed and moved somewhere else (into gnetlist)
+
 6/13/99 Removed s_delete_head from production
 
 	Attempted to find the hidden attribute memory leak
