@@ -7,6 +7,9 @@ ChangeLog for gnetlist
 
 Most recent changes (version wise) are at the top of this file 
 
+6/17/99 Finally put all the changes in to make gnetlist work with the 
+	new connection system 
+
 6/8/99	Integrated old gnetlist into the current development dist scheme
 
 
